# rustminer

./: .gitlab-ci.yml  Cargo.toml
etc/: config.toml
src/: lib.rs  main.rs  misc.rs  stratum.rs  utils.rs  work.rs
src/stratum/: checker.rs  message.rs  mod.rs  reader.rs  tests.rs  writer.rs
src/util/: config.rs  fpga.rs  hex.rs  i2c.rs  mmap.rs  mod.rs  notify.rs  serial.rs  sinkhook.rs
src/utils/: hex.rs  mod.rs  serial.rs
src/work/: mod.rs  subwork.rs  subwork2.rs  tests.rs
