[package]
name = "stratum"
version = "0.1.0"
authors = ["nanpuyue <nanpuyue@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
bytes = { version = "0.4.11", features = ["serde"] }
num-bigint = "0.2.2"
num-traits = "0.2.6"
tokio = "0.1.16"
tokio-serial = { version = "3.2.0", default-features = false }
tokio-codec = "0.1.1"
lazy_static = "1.3.0"
futures = "0.1.25"
crc_all = "0.1.0"
sha256 = { git = "https://github.com/nanpuyue/sha256" }
