[package]
name = "stratum"
version = "0.1.0"
authors = ["nanpuyue <nanpuyue@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"
bytes = { version = "0.4.12", features = ["serde"] }
num-bigint = "0.2.2"
num-traits = "0.2.6"
tokio = "0.1.16"
tokio-serial = { version = "3.2.0", default-features = false }
lazy_static = "1.3.0"
futures = "0.1.25"
libc = "0.2.49"
i2c-linux = "0.1.2"
crc_all = "0.1.0"
fern = "0.5.8"
log = "0.4.6"
chrono = "0.4.6"
sha256 = { git = "https://github.com/nanpuyue/sha256" }
tokio-uio = { git = "https://github.com/nanpuyue/tokio-uio" }
